--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,7 @@ section {
 section h2 {
   font-size: 20px;
   color: #4a90e2;
-  border-bottom: 2px solid #ddd;
+  border-bottom: 1px solid #ddd;
   padding-bottom: 5px;
   margin-bottom: 20px; 
 }
@@ -163,7 +163,7 @@ ul {
 }
 
 ul li {
-  background: #f9f9f9;
+  background: #ddd;
   border: 1px solid #ddd;
   margin-bottom: 10px;
   padding: 10px 15px;
