--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* Общие стили */
 body {
   margin: 0;
   font-family: 'Roboto', Arial, sans-serif;
@@ -14,7 +15,7 @@ body {
   flex: 1;
 }
 
-/* Белая полоса сверху */
+/* Белая шапка */
 .top-bar {
   display: flex;
   align-items: center;
@@ -29,7 +30,7 @@ body {
 .top-bar a {
   display: flex;
   align-items: center;
-  text-decoration: none; /* Убираем подчеркивание */
+  text-decoration: none;
 }
 
 .logo {
@@ -38,9 +39,9 @@ body {
 }
 
 nav {
-  display: flex; /* Делаем nav flex-контейнером */
-  flex-direction: row; /* Кнопки в строку */
-  height: 100%; /* Занимает всю высоту родителя */
+  display: flex;
+  flex-direction: row;
+  height: 100%;
 }
 
 .nav-button {
@@ -60,13 +61,12 @@ nav {
 }
 
 .nav-button:hover {
-  background-color: #f7f7f7; /* Серый фон при наведении */
+  background-color: #f7f7f7;
   color: #000000;
 }
 
-/* Серый фон с заголовком и белой панелью */
+/* Серый фон с заголовком и расписанием*/
 .main-content {
-  flex: 1;
   background-color: #f5f7fa;
   padding-bottom: 5px;
 }
@@ -163,7 +163,7 @@ ul {
 }
 
 ul li {
-  background: #ddd;
+  background: #f5f7fa;
   border: 1px solid #ddd;
   margin-bottom: 10px;
   padding: 10px 15px;
